2014-04-01  Release Maker <nomail@fluendo.com>

	* configure.ac: Back to TRUNK.

=== release 0.10.10 ===

2014-01-28  Release Maker <nomail@fluendo.com>

	* configure.ac: Back to TRUNK.

=== release 0.10.9 ===

2014-01-24  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c:
	(gst_ttml_attribute_parse_time_expression),
	(gst_ttml_attribute_parse):
	Fix memory corruption caused by setlocale. The pointer it returns
	is not valid forever so its contents must be cached.
	This is undocumented and was causing problems detected on Windows XP
	by Dr. Memory.

2014-01-07  Release Maker <nomail@fluendo.com>

	* configure.ac: Back to TRUNK.

=== release 0.10.8 ===

2014-01-07  Andoni Morales  <amorales@fluendo.com>

	* src/gstttmlattribute.c:
	Fix potential segfault parsing font size attribute

2013-10-31  Release Maker <nomail@fluendo.com>

	* configure.ac: Back to TRUNK.

=== release 0.10.7 ===

2013-10-04  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c:
	- Do not expose text/plain as caps, as it is not true.

2013-08-26  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c:
	(gst_ttml_attribute_parse_time_expression):
	 - Parse time expressions that include a frame number as HH:MM:SS:FF

2013-08-26  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_gen_buffer),
	(gst_ttmlparse_get_property), (gst_ttmlparse_set_property),
	(gst_ttmlparse_class_init), (gst_ttmlparse_init):
	* src/gstttmlparse.h:
	 - Add a property to control whether an empty buffer is required after
	   each text buffer to force its removal. This is only required for
	   text renderers which do not honor buffer duration, like "textrender".
	   Previously the behavior was "TRUE" (generate the empty buffer) and it
	   has now been changed to "FALSE" to simplify applications which render
	   their own subtitle overelays.

2013-04-29  Release Maker <nomail@fluendo.com>

	* configure.ac: Back to TRUNK.

=== release 0.10.6 ===
